<resources>
    <string name="app_name">Match Places</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_login">Username</string>
    <string name="hint_password">Password</string>
    <string name="wrong_login">Invalid username</string>
    <string name="wrong_password">Invalid password</string>

    <string name="login">Sign in</string>
    <string name="new_account">New Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="places">Places</string>
    <string name="title_activity_maps">Map</string>
    <string name="keep_sign">Keep connected</string>
    <string name="title_activity_place_detail_map">Map</string>
    <string name="comment">Comment</string>
    <string name="save">save</string>
    <string name="dialogDeleteTitulo">Are you sure?</string>
    <string name="dialogDeleteMessage">Are you sure that you want to delete this?</string>
    <string name="visited">Visited</string>
    <string name="logout">Logout</string>
    <string name="success">Operation success</string>
    <string name="successUser">user created successfully</string>
    <string name="exist">User already in use</string>
    <string name="texto">Look at this place:</string>
    <string name="shareVia">Share via</string>
    <string name="about">About</string>
    <string name="desenvolvedor">Developer</string>
    <string name="developerName">Patricia Alves Almeida</string>
    <string name="version">Version 1.0</string>
</resources>
