<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_person_pin_circle_black_24dp"
            android:title="@string/places" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_beenhere_black_24dp"
            android:title="@string/visited" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/about" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
