<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_new_user"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
android:background="@color/white"
tools:context="com.projeto.patyalves.projeto.AboutFragment">

<ImageView
    android:src="@drawable/logo"
    android:layout_width="@dimen/logo_width"
    android:layout_height="@dimen/logo_height"
    android:layout_marginTop="50dp"
    android:scaleType="fitXY"
    android:layout_gravity="center"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="10dp"
        android:paddingTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="0dp"
        android:textAlignment="center"
        android:textColor="@color/teal_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvedor"
        android:textSize="10dp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="0dp"
        android:textAlignment="center"
        android:textColor="@color/teal_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_light"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="0dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/developerName"/>



</LinearLayout>
